modified doctor and patient add and list views

--- a/hospital/templates/appointment.html
+++ b/hospital/templates/appointment.html
@@ -113,8 +113,8 @@
                         <h1 class="display-4">Make An Appointment For Your Family</h1>
                     </div>
                     
-                    <a class="btn btn-primary rounded-pill py-3 px-5 me-3" href="{% url 'doctor_list' %}">Find Doctor</a>
-                    <a class="btn btn-outline-primary rounded-pill py-3 px-5" href="">Read More</a>
+                    <a class="btn btn-primary rounded-pill py-3 px-5 me-3" href="{% url 'login' %}">Find Doctor</a>
+                    <a class="btn btn-outline-primary rounded-pill py-3 px-5" href="{% url 'about' %}">Read More</a>
                 </div>
                 
                 </div>
