--- a/hospital/templates/patient_dashboard.html
+++ b/hospital/templates/patient_dashboard.html
@@ -110,7 +110,7 @@
         <div class="container" style="margin-top: 50px;">
             <div class="card" style="width: 18rem">
               <img
-                src="{% static 'img/admin.webp' %}"
+                src="{% static 'img/patient.webp' %}"
                 class="card-img-top"
                 alt="..."
                 style="height: 250px; object-fit: cover;"
@@ -154,7 +154,7 @@
               />
               <div class="card-body">
                 <h5 class="card-title">Medical</h5>
-                <a class="btn btn-primary" style="text-color:white"  href="{% url 'add_medical' %}">Add Medical Details</a><br/><br/>
+                
                 <a class="btn btn-primary" style="text-color:white"  href="{% url 'view_medical' %}">View Medical Details</a>
                 
               </div>
