--- a/hospital/templates/doctor_dashboard.html
+++ b/hospital/templates/doctor_dashboard.html
@@ -125,7 +125,7 @@
           <div class="container" style="margin-top: 50px; ">
             <div class="card" style="width: 18rem">
               <img
-                src="{% static 'img/admin.webp' %}"
+                src="{% static 'img/patient.webp' %}"
                 class="card-img-top"
                 alt="..."
                 style="height: 250px; object-fit: cover;"
@@ -159,7 +159,7 @@
           <div class="container" style="margin-top: 50px; ">
             <div class="card" style="width: 18rem">
               <img
-                src="{% static 'img/admin.webp' %}"
+                src="{% static 'img/team-3.jpg' %}"
                 class="card-img-top"
                 alt="..."
                 style="height: 250px; object-fit: cover;"
